# modvis_django

./: Dockerfile  README.md  docker-compose.yml  requirements.txt
.github/: dependabot.yml
_modvis_django_pkg/: LICENSE.txt  MANIFEST.ini  README.rst  setup.py
_modvis_django_pkg/modvis_scraper/: urls.py  views.py
_modvis_django_pkg/modvis_scraper/templates/modvisscraper/: modvis_scraper.html
app/: .env  db.sqlite3  dockerfile  manage.py  requirements.txt
app/hello_django/: asgi.py  settings.py  urls.py  wsgi.py
app/helloapp/: apps.py  urls.py  views.py
app/modvis_/: asgi.py  settings.py  urls.py  wsgi.py
app/modvis_app/: apps.py  urls.py  views.py
modvis_django_pkg/: README.rst  setup.cfg
modvis_django_pkg/modvis_django_pkg.egg-info/: PKG-INFO  SOURCES.txt
modvis_django_pkg/modvis_scraper/: apps.py
testing/testenv/Scripts/: activate  activate.bat
