[metadata]
    name = modvis_django_pkg
    version = 0.0.1
    description = A Django app about mods
    author = Author Name
    author_email = michaelwnau@gmail.com
    classifiers =
        Environment :: Web Environment
        Framework :: Django
        Framework :: Django :: 3.2
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python :: 3.9    
    
    [options]
    include_package_data = true
    packages = find:
    python_requires = >=3.8
    install_requires =
        Django >= 3.2
            